--- a/pom.xml
+++ b/pom.xml
@@ -122,10 +122,10 @@
 
         <dependency>
             <groupId>com.oracle</groupId>
-            <artifactId>ojdbc14</artifactId>
-            <version>14.0</version>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ojdbc14.jar</systemPath>
+            <systemPath>${project.basedir}/lib/ojdbc6-11.2.0.3.jar</systemPath>
         </dependency>
 
         <dependency>
@@ -158,6 +158,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
         </dependency>
     </dependencies>
 
